--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "highcharts": "^9.3.2",
+    "highcharts-react-official": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -41,8 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "highcharts": "^9.3.2",
-    "highcharts-react-official": "^3.1.0"
-  }
+  "devDependencies": {}
 }
